# SplunkMcpBz

./: .env.example  .gitignore  CHANGELOG.md  DEPLOYMENT_GUIDE.md  Dockerfile  JWT_COMPATIBILITY_FIX_PLAN.md  LICENSE  MCP_CODE_CHANGES.md  MCP_DIAGNOSTICS.md  MCP_ROUTING_FIX_PLAN.md  MCP_ROUTING_IMPLEMENTATION.md  README.md  deploy_fixed_server.sh  docker-compose.yml  itsi_integration_test_results.json  list_indexes_client.py  pyproject.toml  requirements.txt  test_all_mcp_tools.py  test_itsi_full_helper.py  test_itsi_helper.py  test_splunk_direct.py  test_splunk_search.py  websocket_test.py
.git_disabled/: COMMIT_EDITMSG  FETCH_HEAD  config  index
.git_disabled/logs/: HEAD
.git_disabled/logs/refs/heads/: main
config/: https_config.py  monitoring.py  prometheus_metrics.py  redis_cluster.py  settings.py
docs/: CHANGELOG.md  ITSI_USER_GUIDE.md  KUBERNETES_DEPLOYMENT.md  README.md  SECURITY.md  UPDATES.md
k8s/: configmap.yaml  deployment.yaml  ingress.yaml  namespace.yaml  redis-deployment.yaml  secret.yaml  service.yaml
memory-bank/: complete_itsi_integration_report.md  itsi_completion_report.md  mcp_pr_review_guide.md  task_completion_report.md
scripts/: benchmark.py  comprehensive_mcp_debug.py  debug_client.py  deploy-to-k8s.sh  deploy_to_remote.py  mcp_docker_diagnostic.sh  setup_ssl.sh  test_enhanced_itsi.py  test_itsi_helper_functions.py  test_itsi_simple.py
src/splunk_mcp/: auth_middleware.py  itsi_connector.py  itsi_full_helper.py  itsi_helper.py  itsi_helper_with_cache.py  main.py  main.py.backup  main_fixed.py  redis_manager.py  search_helper.py  security.py  splunk_connector.py
tests/: test_mcp_client.py  test_mcp_tools.py  test_search_splunk.py  test_splunk_connection.py
tests/integration/: test_all_mcp_tools.py  test_itsi_integration.py  test_redis_integration.py  test_security_integration.py  test_splunk_search.py
(+5 files in other folders)
