[tool.poetry]
name = "splunk-mcp"
version = "0.1.0"
description = "A Model Context Protocol (MCP) implementation for Splunk and Splunk ITSI"
authors = ["Cline"]
packages = [{include = "splunk_mcp", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
splunk-sdk = ">=2.0.0"
fastmcp = "^2.6.1"
python-multipart = "^0.0.9"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.21.0"
httpx = ">=0.28.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
