[tool.poetry]
name = "splunk-mcp"
version = "1.0.0"
description = "A Model Context Protocol (MCP) implementation for Splunk and Splunk ITSI"
authors = ["Splunk MCP Team"]
packages = [{include = "splunk_mcp", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
splunk-sdk = ">=2.0.0"
fastmcp = "^2.10.2"
fastapi = "^0.115.0"
redis = "^5.0.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9"
pydantic = "^2.5.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.21.0"
httpx = ">=0.28.1"
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
black = "^24.0.0"
isort = "^5.13.0"
flake8 = "^7.0.0"

[tool.poetry.scripts]
splunk-mcp = "splunk_mcp.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
multi_line_output = 3
